Updated api documentation

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,11 +6,11 @@
 <strong class="request-method border-success">POST</strong>
 &nbsp;
 {{URL}}/auth/register</h4></a></div><div id=collapse-Authentication-Registerauser class="panel-collapse collapse"><div class=panel-body><h5 class="label label-primary">Body</h5><span class=resp-prettyprint>{
-&#34;email&#34;: &#34;customer@gmail.com&#34;,
-&#34;firstName&#34;: &#34;Customer&#34;,
+&#34;email&#34;: &#34;partner@gmail.com&#34;,
+&#34;firstName&#34;: &#34;Partner&#34;,
 &#34;lastName&#34;: &#34;Account&#34;,
-&#34;password&#34;: &#34;Customer@123&#34;,
-&#34;role&#34;: &#34;customer&#34;
+&#34;password&#34;: &#34;Partner@123&#34;,
+&#34;role&#34;: &#34;partner&#34;
 }</span><div class=clearfix></div></div></div></div><div class="panel panel-success" id=jump-Authentication-LoginUser><div class=panel-heading><small class="pull-right text-muted">raw</small>
 <a class=text-success data-toggle=collapse data-parent=#accordion-Authentication href=#collapse-Authentication-LoginUser><h4 class=panel-title><span class="glyphicon glyphicon-plus"></span><strong>Login User</strong> &nbsp;|&nbsp;
 <strong class="request-method border-success">POST</strong>
@@ -52,16 +52,16 @@
 <strong class="request-method border-success">POST</strong>
 &nbsp;
 {{URL}}/admin/register</h4></a></div><div id=collapse-Admin-Registerauser class="panel-collapse collapse"><div class=panel-body><h5 class="label label-primary">Body</h5><span class=resp-prettyprint>{
-&#34;email&#34;: &#34;xanahdwwivzx@karenkey.com&#34;,
-&#34;firstName&#34;: &#34;Admin&#34;,
-&#34;lastName&#34;: &#34;Account&#34;,
+&#34;email&#34;: &#34;test@karenkey.com&#34;,
+&#34;firstName&#34;: &#34;Test&#34;,
+&#34;lastName&#34;: &#34;Admin&#34;,
 &#34;password&#34;: &#34;Admin@123&#34;
 }</span><div class=clearfix></div></div></div></div><div class="panel panel-success" id=jump-Admin-LoginUser><div class=panel-heading><small class="pull-right text-muted">raw</small>
 <a class=text-success data-toggle=collapse data-parent=#accordion-Admin href=#collapse-Admin-LoginUser><h4 class=panel-title><span class="glyphicon glyphicon-plus"></span><strong>Login User</strong> &nbsp;|&nbsp;
 <strong class="request-method border-success">POST</strong>
 &nbsp;
 {{URL}}/admin/login</h4></a></div><div id=collapse-Admin-LoginUser class="panel-collapse collapse"><div class=panel-body><h5 class="label label-primary">Body</h5><span class=resp-prettyprint>{
-&#34;email&#34;: &#34;xanahdwwivzx@karenkey.com&#34;,
+&#34;email&#34;: &#34;test@karenkey.com&#34;,
 &#34;password&#34;: &#34;Admin@123&#34;
 }</span><div class=clearfix></div></div></div></div><div class="panel panel-success" id=jump-Admin-ForgotPassword><div class=panel-heading><small class="pull-right text-muted">raw</small>
 <a class=text-success data-toggle=collapse data-parent=#accordion-Admin href=#collapse-Admin-ForgotPassword><h4 class=panel-title><span class="glyphicon glyphicon-plus"></span><strong>Forgot Password</strong> &nbsp;|&nbsp;
@@ -148,7 +148,7 @@
 {{URL}}/admin</h4></a></div><div id=collapse-Admin-Getalladmins class="panel-collapse collapse"><div class=panel-body></div></div></div><div class="panel panel-danger" id=jump-Admin-Deleteanadmin><div class=panel-heading><small class="pull-right text-muted"></small><a class=text-danger data-toggle=collapse data-parent=#accordion-Admin href=#collapse-Admin-Deleteanadmin><h4 class=panel-title><span class="glyphicon glyphicon-plus"></span><strong>Delete an admin</strong> &nbsp;|&nbsp;
 <strong class="request-method border-danger">DELETE</strong>
 &nbsp;
-{{URL}}/admin/63860b126744eeef1d7402f2</h4></a></div><div id=collapse-Admin-Deleteanadmin class="panel-collapse collapse"><div class=panel-body></div></div></div></div></div></div></div><div class="panel panel-default"><div class=panel-heading><h3 class=panel-title id=Partner>Partner
+{{URL}}/admin/638889a136649dd0e467c53f</h4></a></div><div id=collapse-Admin-Deleteanadmin class="panel-collapse collapse"><div class=panel-body></div></div></div></div></div></div></div><div class="panel panel-default"><div class=panel-heading><h3 class=panel-title id=Partner>Partner
 <span class=badge>6</span></h3></div><div class=panel-body><p><div class=request-item><div class=panel-group id=accordion-Partner><div class="panel panel-success" id=jump-Partner-Createalisting><div class=panel-heading><small class="pull-right text-muted">raw</small>
 <a class=text-success data-toggle=collapse data-parent=#accordion-Partner href=#collapse-Partner-Createalisting><h4 class=panel-title><span class="glyphicon glyphicon-plus"></span><strong>Create a listing</strong> &nbsp;|&nbsp;
 <strong class="request-method border-success">POST</strong>
@@ -192,7 +192,12 @@
 <a class=text-info data-toggle=collapse data-parent=#accordion-Users href=#collapse-Users-GetAllLisitngs><h4 class=panel-title><span class="glyphicon glyphicon-plus"></span><strong>Get All Lisitngs</strong> &nbsp;|&nbsp;
 <strong class="request-method border-info">GET</strong>
 &nbsp;
-{{URL}}/users/listings</h4></a></div><div id=collapse-Users-GetAllLisitngs class="panel-collapse collapse"><div class=panel-body><h5 class="label label-info">Query</h5><table class="table table-hover"><thead><tr><th>Key<th>Value<th>Description<tbody><tr><td>area<td>lag<td></table></div></div></div><div class="panel panel-info" id=jump-Users-Getonelistingwithid><div class=panel-heading><small class="pull-right text-muted"></small><a class=text-info data-toggle=collapse data-parent=#accordion-Users href=#collapse-Users-Getonelistingwithid><h4 class=panel-title><span class="glyphicon glyphicon-plus"></span><strong>Get one listing with id</strong> &nbsp;|&nbsp;
+{{URL}}/users/listings</h4></a></div><div id=collapse-Users-GetAllLisitngs class="panel-collapse collapse"><div class=panel-body><h5 class="label label-primary">Body</h5><span class=resp-prettyprint>{
+&#34;area&#34;: &#34;lag&#34;,
+&#34;type&#34;: &#34;hour&#34;,
+&#34;maxPrice&#34;: 1,
+&#34;minPrice&#34;: 12
+}</span><div class=clearfix></div></div></div></div><div class="panel panel-info" id=jump-Users-Getonelistingwithid><div class=panel-heading><small class="pull-right text-muted"></small><a class=text-info data-toggle=collapse data-parent=#accordion-Users href=#collapse-Users-Getonelistingwithid><h4 class=panel-title><span class="glyphicon glyphicon-plus"></span><strong>Get one listing with id</strong> &nbsp;|&nbsp;
 <strong class="request-method border-info">GET</strong>
 &nbsp;
 {{URL}}/users/listings/634de143412736c52fcaf05d</h4></a></div><div id=collapse-Users-Getonelistingwithid class="panel-collapse collapse"><div class=panel-body></div></div></div><div class="panel panel-info" id=jump-Users-GetFeaturedListing><div class=panel-heading><small class="pull-right text-muted"></small><a class=text-info data-toggle=collapse data-parent=#accordion-Users href=#collapse-Users-GetFeaturedListing><h4 class=panel-title><span class="glyphicon glyphicon-plus"></span><strong>Get Featured Listing</strong> &nbsp;|&nbsp;
@@ -236,4 +241,4 @@ if(IsJsonString(html)){var obj=JSON.parse(html);var formattedJson=JSON.stringify
 function IsJsonString(str){try{JSON.parse(str);}catch(e){return false;}
 return true;}
 String.prototype.replaceAll=function(replaceThis,withThis){var re=new RegExp(RegExp.quote(replaceThis),"g");return this.replace(re,withThis);};RegExp.quote=function(str){return str.replace(/([.?*+^$[\]\\(){}-])/g,"\\$1");};function syntaxHighlight(json){json=json.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');return json.replace(/("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g,function(match){var cls='number';if(/^"/.test(match)){if(/:$/.test(match)){cls='key';}else{cls='string';}}else if(/true|false/.test(match)){cls='boolean';}else if(/null/.test(match)){cls='null';}
-return '<span class="'+cls+'">'+match+'</span>';});}</script><br><br><footer class="navbar-default navbar-fixed-bottom"><div class=container-fluid><div class="span12 text-center"><span data-toggle=tooltip title="If the application help you, please feel free to give a star to the project in github. Your star inspire me to work more on open-source projects like this!">Generated at 2022-11-29 14:43:45 by <a href=https://github.com/thedevsaddam/docgen target=_blank class=text-muted>docgen</a></span></div></div></footer>
+return '<span class="'+cls+'">'+match+'</span>';});}</script><br><br><footer class="navbar-default navbar-fixed-bottom"><div class=container-fluid><div class="span12 text-center"><span data-toggle=tooltip title="If the application help you, please feel free to give a star to the project in github. Your star inspire me to work more on open-source projects like this!">Generated at 2022-12-01 14:08:18 by <a href=https://github.com/thedevsaddam/docgen target=_blank class=text-muted>docgen</a></span></div></div></footer>
